--- a/tasks.json
+++ b/tasks.json
@@ -1,7 +1,1 @@
-{
-  "tasks": [
-    {"name":"go outside"},
-    {"name":"clean the dishes"},
-    {"name":"finish the homework"}
-  ]
-}
+{"tasks":[]}
